fix easy-ui__title spacing

--- a/css/index.css
+++ b/css/index.css
@@ -700,6 +700,10 @@ input::placeholder {
     width: 445px;
   }
 
+  .easy-ui__title {
+    letter-spacing: -0.37px;
+  }
+
   .easy-ui__title, .easy-ui__text {
     width: 100%;
     text-align: left;
